# eazy-template

./: Cargo.toml  DockerfileDocurust  DockerfileEazypic  README.md
.github/workflows/: prod.yml
common/common_heygen/: Cargo.toml
common/common_openai/: Cargo.toml
common/common_photoshop/: Cargo.toml
common/common_photoshop/src/: lib.rs
common_aws/: Cargo.toml
common_db/: Cargo.toml
common_elevenlabs/: Cargo.toml
common_heygen/: Cargo.toml
common_heygen/src/: lib.rs
common_openai/: Cargo.toml
common_openai/src/models/: mod.rs
common_openai/src/utilities/: mod.rs
common_photoshop/: Cargo.toml
lib_sharedstate/: Cargo.toml
libaries/lib_errors/: Cargo.toml
libaries/lib_errors/src/: lib.rs
libaries/lib_pdfgems/: Cargo.toml
libaries/lib_pdfgems/src/: lib.rs  merge_pdf.rs
libaries/lib_pdfgems/src/ultilities/: mod.rs
libaries/lib_people/: Cargo.toml
libaries/lib_people/src/: lib.rs
libaries/lib_sharedstate/src/: lib.rs
module_aws/: Cargo.toml
module_aws/src/utilities/: mod.rs
module_content/: Cargo.toml
module_content/src/: lib.rs
modules/module_authentication/: Cargo.toml
modules/module_authentication/src/: lib.rs
modules/module_authentication/src/models/: mod.rs
modules/module_authentication/src/utilities/: mod.rs
modules/module_aws/: Cargo.toml
modules/module_aws/src/: lib.rs
modules/module_aws/src/models/: mod.rs
modules/module_content/: Cargo.toml
service_eazymana/: Cargo.toml
service_eazymana/src/: main.rs
service_eazypic/: Cargo.toml
service_eazypic/src/: main.rs
service_eazypic/src/handler/: authentications.rs  aws.rs  hey_gen.rs  image.rs  mod.rs  welcome.rs
service_eazypic/src/handler/assistant/: gpt_chat.rs  mod.rs
service_eazypic/src/handler/authentication/: authentications.rs  mod.rs
service_eazypic/src/handler/generator/: hey_gen.rs  image.rs  mod.rs
service_eazypic/src/models/: aws.rs  error.rs  heygen.rs  mod.rs  photoshop.rs
service_eazypic/src/routes/: authentications.rs  aws.rs  hey_gen.rs  mod.rs  openai.rs  photoshop.rs
service_eazypic/src/utilities/: aws_s3.rs  mod.rs  photoshop.rs
service_eazypic/src/utilities/contentGenerator/: dale.rs  gpt4.rs  mod.rs
service_eazypic/src/utilities/heyGen/: create_video.rs  get_template.rs  get_videos.rs  mod.rs
service_eazypic/src/utilities/hey_gen/: create_video.rs  get_template.rs  get_videos.rs
services/service_docurust/: Cargo.toml  Dockerfile  docker-compose.yml  setup.sh
services/service_docurust/.github/workflows/: prod.yml
services/service_docurust/src/: main.rs
services/service_docurust/src/handler/: converter.rs  mod.rs
services/service_docurust/src/models/: mod.rs
services/service_docurust/src/routes/: mod.rs
services/service_eazymana/: Cargo.toml
services/service_eazypic/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml  setup.sh
services/service_eazypic/dockerConfig/: config.json
services/service_eazypic/src/handler/: gpt_chat.rs  mod.rs  out_bound.rs
services/service_eazypic/src/routes/: hey_gen.rs
services/service_ladomana/: Cargo.toml  docker-compose.yml  setup.sh
services/service_ladomana/dockerConfig/: fly.toml  templateConfig.json  userProfile.json
services/service_ladomana/src/: main.rs
services/service_ladomana/src/handler/: authentications.rs  aws.rs  class.rs  hey_gen.rs  mod.rs  people.rs  welcome.rs
services/service_ladomana/src/models/: mod.rs
services/service_ladomana/src/routes/: authentications.rs  class.rs  mod.rs  people.rs
