[workspace]
members = [
    "services/service_docurust",
    "services/service_eazypic",
    "services/service_ladomana",
    "modules/module_aws",
    "modules/module_content",
    "modules/module_authentication",
    "common/common_photoshop",
    "common/common_openai",
    "common/common_heygen",
    "libaries/lib_errors",
    "libaries/lib_sharedstate",
    "libaries/lib_pdfgems",
    "libaries/lib_people",
]

[workspace.dependencies]
futures = "0.3.29"
tokio = { version = "1.31.0", features = ["full"] }
serde = { version = "1.0.187", features = ["derive"] }
serde_json = "1.0.104"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
sha256 = "1.1.1"
tokio-stream = "0.1.14"
tower = { version = "0.4", features = ["util", "make"] }
axum = { version = "0.6.20", features = ["multipart"] }
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
thiserror = "1.0"
tower-http = { version = "0.4.0", features = [
    "cors",
    "fs",
    "compression-gzip",
    "decompression-gzip",
    "trace",
] }
base64 = "0.21.5"
mime_guess = "2.0.4"
rand = "0.8.5"
# AWS dependencies
aws-config = "1.1.1"
aws-endpoint = "0.60.0"
aws-sdk-s3 = { version = "1.8.0" }
aws-smithy-http = "0.60.1"
http-body = "1.0.0"
# Dynamic dependencies
reqwest = { version = "0.11.19", features = ["json"] }
tempfile = "3.8.0"
polars = { version = "0.35.2", features = ["lazy"] }

# hashing dependencies
bcrypt = "0.15"
# DB  dependencies
mongodb = "2.6.0"
# DB object relational managing
mysql_async = "0.33.0"
# Async driver for PostgreSQL
tokio-postgres = "0.7"
# Connection pooling 
bb8 = "0.8.0"
# PostgreSQL support for bb8
bb8-postgres = "0.8.0"
#uuid generator for sql
uuid = "1.4.1"
# Internal crate
async-openai = "0.17.0"
openssl-sys = { version = "0.9.96", features = ["vendored"] }
