[package]
name = "common_photoshop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib_errors = {path = "../lib_errors"}
lib_sharedstate={path = "../lib_sharedstate"}
module_aws = {path = "../module_aws"}
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
axum-server.workspace = true
dotenv.workspace = true
reqwest.workspace = true
tokio.workspace = true