[package]
name = "service_eazypic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
chrono.workspace = true
dotenv.workspace = true
sha256.workspace = true
tokio-stream.workspace = true
tower.workspace = { version = true, features = ["util", "make"] }
axum.workspace = { version = true, features = ["multipart"] }
axum-server.workspace = { version = true, features = ["tls-rustls"] }
thiserror.workspace = true
tower-http  = {workspace = true,features = ["cors", "fs", "compression-gzip", "decompression-gzip", "trace"] }
base64.workspace = true
mime_guess.workspace = true
rand.workspace = true
# AWS dependencies
aws-config.workspace = { version = true }
aws-endpoint.workspace = true
aws-sdk-s3.workspace = { version = true }
aws-smithy-http.workspace = true
http-body.workspace = true
# Dynamic dependencies
reqwest.workspace = { version = true, features = ["json"] }
tempfile.workspace = true
polars.workspace = { version = true, features = ["lazy"] }

# DB  dependencies
mongodb.workspace = true
# DB object relational managing
sea-orm.workspace = true
sea-orm-macros.workspace = true
# Async driver for PostgreSQL
tokio-postgres.workspace = true
# Connection pooling 
bb8.workspace = true
# PostgreSQL support for bb8
bb8-postgres.workspace = true
#uuid generator for sql
uuid.workspace = true
# Internal crate
async-openai.workspace = true

[build-dependencies]
# cc.workspace = true

[dev-dependencies]
# rand.workspace = true
