[package]
name = "common_openai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib_errors = {path = "../../libaries/lib_errors"}
lib_sharedstate={path = "../../libaries/lib_sharedstate"}
serde.workspace = true
serde_json.workspace = true
async-openai.workspace = true
reqwest.workspace = true
dotenv.workspace = true
axum.workspace = true
axum-server.workspace = true