[package]
name = "module_aws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib_errors = {path = "../../libaries/lib_errors"}
lib_sharedstate={path = "../../libaries/lib_sharedstate"}
axum.workspace = true
chrono.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
aws-config.workspace =  true 
aws-endpoint.workspace = true
aws-sdk-s3.workspace =  true 
aws-smithy-http.workspace = true
dotenv.workspace = true