[package]
name = "lib_pdfgems"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdf_gems = {path = "../../libaries/lib_pdfgems"}
lib_errors = {path = "../../libaries/lib_errors"}
lib_sharedstate={path = "../../libaries/lib_sharedstate"}
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-stream.workspace = true
# pdf_gems = {git="https://vanha777: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@github.com/Strong-Room/RustPDFToolkit.git", branch="main"}
axum-server.workspace = true
axum.workspace = true
tempfile.workspace = true
futures.workplace = true
tower.workspace = true
# aws-config.workspace =  true 
# aws-endpoint.workspace = true
# aws-sdk-s3.workspace =  true 
dotenv.workspace = true
base64.workspace = true
tower-http.workspace  = true
openssl-sys.workplace = true
