[package]
name = "service_eazypic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
# workspace.directories
module_content = {path = "../../modules/module_content"}
module_aws = {path = "../../modules/module_aws"}
common_openai = {path = "../../common/common_openai"}
common_heygen = {path = "../../common/common_heygen"}
common_photoshop = {path = "../../common/common_photoshop"}
lib_errors = {path = "../../libaries/lib_errors"}
lib_sharedstate={path = "../../libaries/lib_sharedstate"}

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
dotenv.workspace = true
sha256.workspace = true
tokio-stream.workspace = true
tower.workspace = true
axum.workspace = true
axum-server.workspace = true
thiserror.workspace = true
tower-http.workspace  = true
base64.workspace = true
mime_guess.workspace = true
rand.workspace = true
# AWS dependencies
aws-config.workspace =  true 
aws-endpoint.workspace = true
aws-sdk-s3.workspace =  true 
aws-smithy-http.workspace = true
http-body.workspace = true
# Dynamic dependencies
reqwest.workspace = true
tempfile.workspace = true
polars.workspace = true

# DB  dependencies
mongodb.workspace = true
# DB object relational managing
sea-orm.workspace = true
sea-orm-macros.workspace = true
# Async driver for PostgreSQL
tokio-postgres.workspace = true
# Connection pooling 
bb8.workspace = true
# PostgreSQL support for bb8
bb8-postgres.workspace = true
#uuid generator for sql
uuid.workspace = true
# Internal crate
async-openai.workspace = true

[build-dependencies]
# cc.workspace = true

[dev-dependencies]
